--- a/Queue/index.html
+++ b/Queue/index.html
@@ -3,3 +3,4 @@ layout: page
 title: Queue
 permalink: /Queue/
 ---
+See <a href="https://github.com/dSpaceLabs/Queue">https://github.com/dSpaceLabs/Queue</a>
