--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ title: Home
                     <a href="{{ site.baseurl | prepend: site.url  }}/archive/#{{ post.date | date: '%Y-%m-%d' }}"><span class="octicon octicon-calendar"></span>&nbsp;<span>{{ post.date | date: "%Y-%m-%d" }}</span></a>
                 </header>
                 <div class="module">
-                  <a class="title" href="{{ post.url | prepend: site.baseurl | prepend: site.url }}">
+                  <a class="title" href="{{ post.url }}">
                       {{ post.title }}
                   </a>
                   <p>{% if post.excerpt.size > 32 %}{{ post.excerpt }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 160 }}{% endif %}</p>
-                  <a class="readmore" href="{{ post.url | prepend: site.baseurl | prepend: site.url }}">Read More</a>
+                  <a class="readmore" href="{{ post.url }}">Read More</a>
                   <footer>
                       {% for tag in post.tags %}
                       <a class="word-keep" href="{{ site.baseurl | prepend: site.url }}/tags/#{{ tag }}"><span class="octicon octicon-tag"></span>&nbsp;{{ tag }}</a>
